# wai-static-pages

./: .gitignore  README.md  wai-static-pages.cabal
Network/WAI/Application/: StaticPages.hs
